<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:padding="5dp">

            <TextView
                android:text="@string/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/position"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>



    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_and_stop"
        android:text="@string/start"
        android:paddingBottom="10dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_image_dial"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/compass_dial"
            android:src="@drawable/dial" />
        <ImageView
            android:id="@+id/main_image_hands"
            android:layout_width="10dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/compass_hands"
            android:scaleType="fitXY"
            android:src="@drawable/hands" />

        <TextView
            android:id="@+id/sotw_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/CoordinatesGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"/>

            <TextView
            android:text="-"
            android:id="@+id/coordinatesGPS"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/coordinatesNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"/>

            <TextView
                android:text="-"
                android:id="@+id/coordinatesNetwork"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="end"
                android:layout_width="wrap_content" />
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/take_photo"
        android:text="@string/Take_Photo"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout">

        <TextureView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textureView"/>
    </FrameLayout>

</LinearLayout>
